--- a/src/pages/Ship_List_Page/Ship_List_Page.css
+++ b/src/pages/Ship_List_Page/Ship_List_Page.css
@@ -6,14 +6,11 @@
     position: relative !important;
     display: flex;
     height: 350px;
-    background: url("./assets/bck.png");
-    background-size: 100% 100%;
+    background: url("./assets/bck.jpg");
+    background-size: 100% 130%;
     width: 100%;
 }
 [id='1']{
     align-self: flex-end;
 
-}
-.container{
-	min-width:100%
 }
